--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     compile 'com.android.support:support-v4:25.2.0'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.android.support:design:25.3.1'
+    compile 'com.roomorama:caldroid:3.0.1'
     testCompile 'junit:junit:4.12'
 }
