--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,9 +31,12 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:25.2.0'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.google.code.gson:gson:2.7'
     compile 'com.android.support:design:25.3.1'
     compile 'com.roomorama:caldroid:3.0.1'
     compile 'com.github.alamkanak:android-week-view:1.2.6'
     compile 'com.android.support:cardview-v7:25.3.1'
+//    compile 'com.google.zxing:core:3.0.1'
+//    compile 'com.googlecode.ez-vcard:ez-vcard:0.10.2'
     testCompile 'junit:junit:4.12'
 }
