--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 25
@@ -10,6 +11,10 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        compileOptions {
+            sourceCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility JavaVersion.VERSION_1_8
+        }
     }
     buildTypes {
         release {
@@ -36,6 +41,8 @@ dependencies {
     compile 'com.roomorama:caldroid:3.0.1'
     compile 'com.github.alamkanak:android-week-view:1.2.6'
     compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'org.java-websocket:Java-WebSocket:1.3.0'
+    compile 'com.github.NaikSoftware:StompProtocolAndroid:1.1.5'
 //    compile 'com.google.zxing:core:3.0.1'
 //    compile 'com.googlecode.ez-vcard:ez-vcard:0.10.2'
     testCompile 'junit:junit:4.12'
