--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.android.support:design:25.3.1'
+    compile group: 'com.google.guava', name: 'guava', version: '15.0'
     /*=== End of Toqa ===*/
 
 
